# cpp-lab

./: CMakeLists.txt  cmake_build_release.sh  readme.md
callbacks/: CMakeLists.txt
callbacks/src/: main.cpp  myCallback.cpp  myCallback.h
containers/: CMakeLists.txt  ejercicioLists.md  ejercicioVector.md
containers/src/: main.cpp  myList.cpp  myList.h  myVector.cpp  myVector.h
notes/: cases.md  contenedores.md  cpp11.md  cpp20.md  embeddedCpp.md  miscelaneo.md  notes1.md  objectSlicing.md
notes/cpp11/: auto.md  constexpr.md  enum_class.md  lambda.md  move_semantics.md  nullptr.md  range-based_for.md  smart_pointers.md  static_assert.md  thread.md
notes/cpp11/thread/: unique_lock.md
notes/cpp17/: thread.md
notes/cpp20/: consteval.md  constinit.md  thread.md
notes/embedded/: extern.md  staticEnClases.md  staticFuera.md  storageDuration.md  volatile.md
notes/misc/: RAII.md  casts.md  controlDeAcceso.md  inicializacion.md  miembros.md  ordenConstDest.md  p2p.md  staticClasses.md
templateApp/: CMakeLists.txt
templateApp/src/: main.cpp  myClass.cpp  myClass.h
templateApp/unittests/: CMakeLists.txt
templateApp/unittests/src/: test_myClass.cpp
templates/: CMakeLists.txt
templates/src/: ejercicios.cpp  ejercicios.h  main.cpp  millisecond.cpp  millisecond.h  templates.h
templates/unittests/: CMakeLists.txt
threads/: CMakeLists.txt  ejercicio.md
threads/src/: main.cpp  myThreads.cpp  threadPool.cpp  threadPool.h
